kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-helidon-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: coherence.shukawam.cf
      http:
        paths:
          - backend:
              service:
                name: k8s-helidon-app
                port:
                  number: 80
            path: /
            pathType: Prefix
